[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfprompt-moe-paper"
version = "0.1.0"
description = "Clean RFPrompt MoE training code for modulation classification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0,<2.4.0",
    "matplotlib>=3.4",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "numba>=0.59.0",
]
